--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,22 @@
         android:theme="@style/Theme.GrievifyAdmin"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".StartActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.GrievifyAdmin.NoActionBar">
+            android:label="@string/title_activity_start"
+            android:theme="@style/Theme.GrievifyAdmin.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.GrievifyAdmin.NoActionBar">
+
         </activity>
     </application>
 
