--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,30 @@
         android:theme="@style/Theme.GrievifyAdmin"
         tools:targetApi="31">
         <activity
+            android:name=".ChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DescriptionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AuthActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.Profile.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.Analytics.AnalyticsActivity"
+            android:exported="false" />
+        <activity
             android:name=".StartActivity"
             android:exported="true"
-            android:label="@string/title_activity_start"
-            android:theme="@style/Theme.GrievifyAdmin.NoActionBar" >
+            android:label="@string/app_name"
+            android:theme="@style/Theme.GrievifyAdmin.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.GrievifyAdmin.NoActionBar">
-
         </activity>
     </application>
 
