--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,8 @@ dependencies {
     implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
     implementation 'com.nineoldandroids:library:2.4.0'
 
+    //lottie
+    implementation 'com.airbnb.android:lottie:5.2.0'
+
 
 }
